# remotecuda

./: .clang-format  .gitignore  README  README.md  client.cpp  client.h  cuda_api_tests.cpp  hidden_api.h  hook.py  hook_cuda.cpp  manual_handle.cpp  manual_hook.cpp  rpc.cpp  rpc.h  rpc_server.cpp  server.cpp  server.h
.cursor/rules/: rpc-implementation.mdc  rpc-protocol.mdc
prompts/: CUDA Functions with Persistent Memory Parameters.md  size_formula_prompt.txt  structs_with_pointer.md
rpc/: CMakeLists.txt  example.cpp  rpc_buffers.cpp  rpc_client.cpp  rpc_conn.cpp  rpc_core.h  rpc_server.cpp
test/: Makefile
test/cuda_api_tests/: cuda_api_tests.cu
test/cuda_runtime_tests/: Makefile  README.md  common.cu  common.h  cuda_runtime_api_tests.cu  generate_tests.py  test_cuda3_d_array.cu  test_cuda_array.cu  test_cuda_array_get_info.cu  test_cuda_array_get_plane.cu  test_cuda_array_get_sparse_properties.cu  test_cuda_bind_texture2_d.cu  test_cuda_choose_device.cu  test_cuda_ctx_reset_persisting_l2_cache.cu  test_cuda_device_cache_config.cu  test_cuda_device_flags.cu  test_cuda_device_flush_g_p_u_direct_r_d_m_a_writes.cu  test_cuda_device_get_attribute.cu  test_cuda_device_get_nv_sci_sync_attributes.cu  test_cuda_device_get_p2_p_attribute.cu  test_cuda_device_get_stream_priority_range.cu  test_cuda_device_get_texture1_d_linear_max_width.cu  test_cuda_device_graph_mem.cu  test_cuda_device_graph_mem_attributes.cu  test_cuda_device_limits.cu  test_cuda_device_mem_pool.cu  test_cuda_device_p_c_i_bus_id.cu  test_cuda_device_peer_access.cu  test_cuda_device_reset.cu  test_cuda_device_shared_mem_config.cu  test_cuda_device_synchronize.cu  test_cuda_double_conversion.cu  test_cuda_driver_entry_point.cu  test_cuda_event_create.cu  test_cuda_event_destroy.cu  test_cuda_event_record.cu  test_cuda_event_record_with_flags.cu  test_cuda_event_synchronize.cu  (+77 more)
test/t1/: t1.cu
(+18 files in other folders)
